--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -10,7 +10,7 @@
 # For MineCraft Colour Codes Check Out https://www.colorschemer.com/minecraft-color-codes/
 
 # Plugin Prefix
-plugin-prefix: "&3[Announcer]"
+announcer-prefix: "&8&l[&bAnnouncer&8&l]"
 
 # Delay Per Message (Seconds)
 message-delay: 5
